Modificação - Ajuste na estilização do gráfico de progresso.

--- a/web-data-vizz/public/index.html
+++ b/web-data-vizz/public/index.html
@@ -28,10 +28,11 @@
             <div class="titulo">
                 <h1>Organize seus estudos <br> de violino de forma <br> simples e eficiente</h1>
                 <p>Com o Violin Study, você registra seus estudos, define metas e visualiza <br> sua evolução com
-                    gráficos e indicadores-chave fáceis de entender. </p>
+                    gráficos e indicadores-chave fáceis de entender. 
+                </p>
 
             </div>
-            <img style="width: 500px; height: 710px;" src="assets/Design sem nome (1).svg" alt="">
+            <img style="width: 500px; height: 710px;" src="assets/Design sem nome (1).svg" class="fade-in" alt="">
         </section>
 
 
