Modificação - Transferência dos arquivos de documentação.

--- a/web-data-viz/public/login.html
+++ b/web-data-viz/public/login.html
@@ -28,7 +28,7 @@
         <div class="container_login">
             <h1>Olá de volta!</h1>
             <input type="text" placeholder="Email" id="input_email">
-            <input type="password" placeholder="Senha" id="input_senha">
+            <input type="password" placeholder="Senha" id="input_senha" autocomplete="off">
             <div class="erro_login" id="div_erro_login">Preencha todos os campos!</div>
             <button onclick="entrar()"><b>Entrar</b></button>
             <li>Não possui conta? <a href="cadastro.html"><b>Cadastre-se</b></a></li>
