--- a/web-data-viz/public/telaUsuario.html
+++ b/web-data-viz/public/telaUsuario.html
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="fundoGrafico fade-in" style="animation-delay: 0.6s">
-            <p>Total de metas atuais</p>
+            <p>Total acumulado de metas</p>
             <div class="graficoProgresso">
                 <canvas id="graficoProgresso"></canvas>
             </div>
